--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ body {
 .menu-items ul li .sub-menu {
     list-style: none;
     padding: 0;
-    margin: 10px 0 0 0;
+    margin: 0 0 20px 0;
     text-align: center;
 }
 
